static/css/interface/_timeline.scss
.timeline {
    background-color: #eee;
    width: 100%;
    height: 100%;
    min-width: 400px;
    min-height: 100px;
    position: relative;

    .buttons {
        position: absolute;
        bottom: 0;
        height: 2.5em;

        .button {
            display: inline-block;
        }
    }

    .layers {
        height: 100%;
        overflow-y: scroll;
    }

    .layer-wrap {
        position: relative;    
    }

    .layer {
        height: 50px;
        background-color: #fff;
        border: 1px solid #ccc;
        margin-left: 1em;
    }
}

